# vlkbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  ENV_SETUP.md  Makefile  README.md  README_STRUCTURE.md  api_client.py  bot.py  config.py  database.py  docker-compose.yml  interest_trainings.py  main.py  main.py.old  models.py  playground.py  populate_trainings.py  pyproject.toml  run.py  utils.py
components/: modals.py
discord_config/: README.md  __init__.py  dev.py  prod.py
scripts/: complete_trainings.py  fetch_player_profile.py  interest_training_records.csv  list_trainings.py  populate_trainings.py  populate_vlk.py  search_player.py  training_records.csv  vlk_members.csv
views/: __init__.py  hledam_spoluhrace.py  member_management.py  player_select.py  register_player.py  thread_close.py  training_grounds.py  user_select.py  vip_claim.py
